tests/baselines/reference/parserModuleDeclaration9.errors.txt
parserModuleDeclaration9.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserModuleDeclaration9.ts(1,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserModuleDeclaration9.ts(1,17): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== parserModuleDeclaration9.ts (3 errors) ====
    module a.number.b {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                    ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }